Dinh nghia them cac SW, mot so hang so, viet chuc nang check PIN

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,7 +28,7 @@ package.aid=//aid/9225B1D8AA/0B
 platform.active=javacard_default
 proxy.generation.dir=${dist.dir}/generated_proxies_src
 run.apdutool=true
-run.script=${scripts.dir}/selfservicegasstation.scr
+run.script=scripts/selfservicegasstation.scr
 runtime.descriptor=META-INF/MANIFEST.MF
 scripts.dir=scripts
 sign.alias=ri
